--- a/src/app/restaurant-get/restaurant-get.component.html
+++ b/src/app/restaurant-get/restaurant-get.component.html
@@ -9,7 +9,7 @@
     </thead>
   
     <tbody>
-        <tr *ngFor="let restaurant of restaurants.data">
+        <tr *ngFor="let restaurant of restaurants">
             <td>{{ restaurant.RestaurantName }}</td>
             <td>{{ restaurant.RestaurantDescription }}</td>
             <td>{{ restaurant.RestaurantPhone }}</td>
