--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 
 <ng2-slim-loading-bar color="blue"></ng2-slim-loading-bar>
-<nav class="navbar navbar-expand-sm bg-light">
+<nav class="navbar navbar-expand-sm bg-light" *ngIf="currentUser">
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -18,11 +18,21 @@
         <a routerLink="restaurants/maps" class="nav-link" routerLinkActive="active">
           Restaurants Maps
         </a>
-      </li>  
+      </li>
+      <button class="nav-item nav-link" (click)="logout()">Logout</button>
     </ul>
   </div>
 </nav>
 
-<div class="container">
+<!-- <div class="container">
   <router-outlet></router-outlet>
+</div> -->
+<div class="jumbotron">
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-6 offset-sm-3">
+              <router-outlet></router-outlet>
+          </div>
+      </div>
+  </div>
 </div>
