--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,42 @@
+<!-- <button routerLink="/authentication/login">Login</button>
+<button routerLink="/restaurant/create">Create Restaurant</button>
+<button routerLink="/restaurant">Restaurants</button>
+<button routerLink="">Home</button>
+<button class="nav-item nav-link" (click)="logout()">Logout</button>
 
-
-<ng2-slim-loading-bar color="blue"></ng2-slim-loading-bar>
+<router-outlet></router-outlet> -->
 <nav class="navbar navbar-expand-sm bg-light" *ngIf="currentUser">
-  <div class="container-fluid">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a routerLink="restaurant/create" class="nav-link" routerLinkActive="active">
-          Create Restaurant
-        </a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="restaurants" class="nav-link" routerLinkActive="active">
-          Restaurants
-        </a>
-      </li>
-      <li class="nav-item">
-        <a routerLink="restaurants/maps" class="nav-link" routerLinkActive="active">
-          Restaurants Maps
-        </a>
-      </li>
-      <button class="nav-item nav-link" (click)="logout()">Logout</button>
-    </ul>
+    <div class="container-fluid">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a routerLink="restaurant/create" class="nav-link" routerLinkActive="active">
+            Create Restaurant
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="restaurant" class="nav-link" routerLinkActive="active">
+            Restaurants
+          </a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="restaurants/maps" class="nav-link" routerLinkActive="active">
+            Restaurants Maps
+          </a>
+        </li>
+        <button class="nav-item nav-link" (click)="logout()">Logout</button>
+      </ul>
+    </div>
+  </nav>
+  
+  <!-- <div class="container">
+    <router-outlet></router-outlet>
+  </div> -->
+  <div class="jumbotron">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
   </div>
-</nav>
-
-<!-- <div class="container">
-  <router-outlet></router-outlet>
-</div> -->
-<div class="jumbotron">
-  <div class="container">
-      <div class="row">
-          <div class="col-sm-6 offset-sm-3">
-              <router-outlet></router-outlet>
-          </div>
-      </div>
-  </div>
-</div>
