--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,35 @@
 <button class="nav-item nav-link" (click)="logout()">Logout</button>
 
 <router-outlet></router-outlet> -->
-<nav class="navbar navbar-expand-sm bg-light" *ngIf="currentUser">
+<mat-toolbar color="primary" *ngIf="currentUser">
+    <mat-toolbar-row>
+        <span>Restaurant</span>
+        <span class="example-fill-remaining-space"></span>
+        <span class="align-center"></span>
+        <span class="example-spacer"></span>
+        <button mat-button routerLink="restaurant/create" class="nav-link" routerLinkActive="active">Create Restaurant</button>
+        <button mat-button routerLink="restaurant" class="nav-link" routerLinkActive="active">Restaurants</button>
+        <button mat-button (click)="logout()">Logout</button>
+        <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+            <mat-icon>dialpad</mat-icon>
+            <span>Redial</span>
+        </button>
+        <button mat-menu-item disabled>
+            <mat-icon>voicemail</mat-icon>
+            <span>Check voicemail</span>
+        </button>
+        <button mat-menu-item>
+            <mat-icon>notifications_off</mat-icon>
+            <span>Disable alerts</span>
+        </button>
+        </mat-menu>
+    </mat-toolbar-row>
+</mat-toolbar>
+<!-- <nav class="navbar navbar-expand-sm bg-light" *ngIf="currentUser">
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -26,7 +54,7 @@
         <button class="nav-item nav-link" (click)="logout()">Logout</button>
       </ul>
     </div>
-  </nav>
+  </nav> -->
   
   <!-- <div class="container">
     <router-outlet></router-outlet>
