--- a/src/app/restaurant-catalog/restaurant-get/restaurant-get.component.html
+++ b/src/app/restaurant-catalog/restaurant-get/restaurant-get.component.html
@@ -1,4 +1,4 @@
-<table class="table table-hover">
+<!-- <table class="table table-hover">
     <thead>
     <tr>
         <td>Restaurant Name</td>
@@ -17,5 +17,48 @@
             <td><a (click) = "deleteRestaurant(restaurant._id)" class="btn btn-danger">Delete</a>
         </tr>
     </tbody>
-  </table>
+  </table> -->
 
+<mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+    
+    <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+    
+        <!-- ID Column -->
+        <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Restaurant Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.RestaurantName}} </td>
+        </ng-container>
+    
+        <!-- Progress Column -->
+        <ng-container matColumnDef="progress">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Restaurant Description </th>
+        <td mat-cell *matCellDef="let row"> {{row.RestaurantDescription}} </td>
+        </ng-container>
+    
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Restaurant Mail </th>
+        <td mat-cell *matCellDef="let row" > {{row.RestaurantMail}} </td>
+        </ng-container>
+    
+        <!-- Color Column -->
+        <ng-container matColumnDef="color">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Edit </th>
+        <td mat-cell *matCellDef="let row" [style.color]="row.color"> <button mat-raised-button color="primary" [routerLink]="['/restaurant/edit', row._id]" >Edit</button> </td>
+        </ng-container>
+
+        <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Delete </th>
+            <td mat-cell *matCellDef="let row" [style.color]="row.color"> <button mat-raised-button (click) = "deleteRestaurant(row._id)" color="warn" >Delete</button> </td>
+        </ng-container>
+    
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+        </tr>
+    </table>
+    
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
