--- a/src/app/restaurant-catalog/restaurant-edit/restaurant-edit.component.html
+++ b/src/app/restaurant-catalog/restaurant-edit/restaurant-edit.component.html
@@ -97,7 +97,7 @@
 
   <mat-card class="example-card">
       <mat-card-header>
-          <mat-card-subtitle style="color:black">Create Restaurant</mat-card-subtitle>
+          <mat-card-subtitle style="color:black">Edit Restaurant</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content  class="example-container">
           <form class="example-form" [formGroup]="angForm">
@@ -149,7 +149,7 @@
       </mat-card-content>
       <mat-divider></mat-divider>
       <mat-card-actions>
-          <button mat-raised-button color="primary" [disabled]="angForm.pristine || angForm.invalid" (click)=updateRestaurant(angForm,restaurant._id)>Edit</button>
+          <button mat-raised-button color="primary" [disabled]="angForm.pristine || angForm.invalid" (click)=updateRestaurant(angForm)>Edit</button>
           <!-- <button mat-raised-button>SHARE</button> -->
         </mat-card-actions>
   </mat-card>
