--- a/src/app/restaurant-catalog/restaurant-add/restaurant-add.component.html
+++ b/src/app/restaurant-catalog/restaurant-add/restaurant-add.component.html
@@ -14,8 +14,17 @@
             <textarea matInput placeholder="Restaurant Description" formControlName="RestaurantDescription"></textarea>
           </mat-form-field>
           <mat-card-subtitle style="color:black"><strong>Data</strong></mat-card-subtitle>
+          <!-- <mat-form-field class="full-width col-4">
+            <mat-select formControlName="country" placeholder="Country">
+              <mat-option *ngFor="let country of countries" [value]="country">
+                {{ country.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field> -->
           <mat-form-field class="example-full-width">
             <input type="tel" matInput placeholder="Restaurant phone" formControlName="RestaurantPhone" required>
+            <mat-hint align="start"><strong>Mobile:</strong> {{ angForm.value.country_phone.country.sampleMobilePhone }}</mat-hint>
+            <mat-hint align="end"><strong>Fixed:</strong> {{ angForm.value.country_phone.country.sampleFixedPhone }}</mat-hint>
             <mat-icon matSuffix>mode_edit</mat-icon>
             <mat-error *ngIf="angForm.controls['RestaurantPhone'].invalid && (angForm.controls['RestaurantPhone'].dirty || angForm.controls['RestaurantPhone'].touched)">Restaurant phone is required</mat-error>
           </mat-form-field>
@@ -36,6 +45,8 @@
           </mat-form-field>
           <mat-form-field class="example-full-width">
               <input type="tel" matInput placeholder="Restaurant Chef Phone" formControlName="RestaurantChefPhone" required>
+              <mat-hint align="start"><strong>Mobile:</strong> {{ angForm.value.country_phone.country.sampleMobilePhone }}</mat-hint>
+              <mat-hint align="end"><strong>Fixed:</strong> {{ angForm.value.country_phone.country.sampleFixedPhone }}</mat-hint>
               <mat-icon matSuffix>mode_edit</mat-icon>
               <mat-error *ngIf="angForm.controls['RestaurantChefPhone'].invalid && (angForm.controls['RestaurantChefPhone'].dirty || angForm.controls['RestaurantChefPhone'].touched)">Restaurant chef phone is required</mat-error>
             </mat-form-field>
@@ -59,7 +70,7 @@
             <mat-error *ngIf="angForm.controls['RestaurantLat'].invalid && (angForm.controls['RestaurantLat'].dirty || angForm.controls['RestaurantLat'].touched) " class="alert alert-danger">Restaurant Latitud is required</mat-error>
           </mat-form-field>
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Restaurant Latitude" formControlName="RestaurantLng" [(ngModel)]="lng" readonly>
+            <input matInput placeholder="Restaurant Longitude" formControlName="RestaurantLng" [(ngModel)]="lng" readonly>
             <mat-error *ngIf="angForm.controls['RestaurantLng'].invalid && (angForm.controls['RestaurantLng'].dirty || angForm.controls['RestaurantLng'].touched) " class="alert alert-danger">Restaurant Longitude is required</mat-error>
           </mat-form-field>
           <agm-map style="height: 300px;"
