--- a/src/app/restaurant-catalog/restaurant-edit/restaurant-edit.component.html
+++ b/src/app/restaurant-catalog/restaurant-edit/restaurant-edit.component.html
@@ -140,8 +140,35 @@
                 </mat-error>
             </mat-form-field>
             <span>Restaurant Rating: <star-rating-control [starType]="'svg'" formControlName="RestaurantRating" [(ngModel)] = "restaurant.RestaurantRating"></star-rating-control></span>
-                <!-- <star-rating [starType]="'svg'" [rating]="currentRate"></star-rating> -->
-                <!-- <pre>{{ angForm.value.RestaurantRating | json }}</pre> -->
+            <mat-card-subtitle style="color:black"><strong>Restaurant Location</strong></mat-card-subtitle>
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Restaurant Address" formControlName="RestaurantAddress" [(ngModel)]="restaurant.RestaurantAddress" readonly>
+            <mat-error *ngIf="angForm.controls['RestaurantAddress'].invalid && (angForm.controls['RestaurantAddress'].dirty || angForm.controls['RestaurantAddress'].touched) " class="alert alert-danger">Restaurant Latitud is required</mat-error>
+          </mat-form-field>
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Restaurant Latitude" formControlName="RestaurantLat" [(ngModel)]="restaurant.RestaurantLat" readonly>
+            <mat-error *ngIf="angForm.controls['RestaurantLat'].invalid && (angForm.controls['RestaurantLat'].dirty || angForm.controls['RestaurantLat'].touched) " class="alert alert-danger">Restaurant Latitud is required</mat-error>
+          </mat-form-field>
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Restaurant Longitude" formControlName="RestaurantLng" [(ngModel)]="restaurant.RestaurantLng" readonly>
+            <mat-error *ngIf="angForm.controls['RestaurantLng'].invalid && (angForm.controls['RestaurantLng'].dirty || angForm.controls['RestaurantLng'].touched) " class="alert alert-danger">Restaurant Longitude is required</mat-error>
+          </mat-form-field>
+          <agm-map style="height: 300px;"
+            [latitude]="lat"
+            [longitude]="lng"
+            [zoom]="zoom || 8"
+            (mapClick)="addMarker($event.coords.lat, $event.coords.lng)"
+            >
+            <agm-marker
+              *ngFor="let marker of markers"
+              [latitude]="marker.lat"
+              [longitude]="marker.lng"
+              [opacity]="marker.alpha"
+              [markerDraggable]="true"
+              (dragEnd)="markerDragEnd($event)"
+            ></agm-marker>
+            <h5>Address: {{address}}</h5>
+          </agm-map>
         
             
           </form>
