upload restaurant maps

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,9 +18,9 @@
         <mat-icon>more_vert</mat-icon>
         </button>
         <mat-menu #menu="matMenu">
-        <button mat-menu-item>
-            <mat-icon>dialpad</mat-icon>
-            <span>Redial</span>
+        <button mat-menu-item routerLink="restaurant/maps">
+            <mat-icon>maps</mat-icon>
+            <span>View on map</span>
         </button>
         <button mat-menu-item disabled>
             <mat-icon>voicemail</mat-icon>
